tests/diagnostics/packages/symbols/duplicate_public_name/expect.txt
# exit: 1
two.coppice:1:8: error: duplicate package-visible symbol 'token'
  public function token() -> nil {
         ^
